Fix fixed sidebar: add top:0 and adjust section margin-left for proper alignment

--- a/assets/css/yifan-style.css
+++ b/assets/css/yifan-style.css
@@ -33,13 +33,14 @@ header {
   width: 232px;
   float: left;
   position: fixed;
-  left: calc(50% - 530px); /* Center of wrapper: 50% - (1060px / 2) */
+  left: calc(50% - 530px); /* Center of wrapper: 50% - (1060px / 2) = left edge of wrapper */
   padding-top: 6.0em;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   z-index: 10;
+  top: 0;
 }
 
 /* Avatar styling */
@@ -168,7 +169,7 @@ section {
   float: right;
   padding-top: 1.2em;
   padding-bottom: 50px;
-  margin-left: 0;
+  margin-left: 280px; /* 232px (header width) + 48px (gap) */
   position: relative;
 }
 
